@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020161118"
-#define public MagickPackageReleaseDate "snapshot-20161118"
+#define public MagickPackageVersionAddendum ".020161126"
+#define public MagickPackageReleaseDate "snapshot-20161126"
